--- a/pso/pom.xml
+++ b/pso/pom.xml
@@ -14,6 +14,14 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
+	<repositories>
+ 		<repository>
+  			<id>james-ii-repo</id>
+  			<name>james-ii-repo</name>
+  			<url>http://wwwmosi.informatik.uni-rostock.de/jamesIIreleases/maven</url>
+ 		</repository>
+	</repositories>
+
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -21,5 +29,11 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    
+    <dependency>
+  		<groupId>org.jamesii</groupId>
+  		<artifactId>core</artifactId>
+  		<version>0.9.7</version>
+ 	</dependency>
   </dependencies>
 </project>
