--- a/pso/.project
+++ b/pso/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>pso</name>
+	<name>com.blasedef.pso</name>
 	<comment></comment>
 	<projects>
 		<project>eu.quanticol.carma</project>
